<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/app_name"
        android:id="@+id/gitlab_tv"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_in"
        android:id="@+id/sign_in_tv"
        android:layout_below="@+id/gitlab_tv"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/host_url_et"
        android:inputType="textUri"
        android:layout_below="@+id/sign_in_tv"
        android:layout_centerHorizontal="true"
        android:hint="@string/host_url"
        android:singleLine="true"
        android:text="code.logicdrop.com" />

    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/host_url_et">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_et"
            android:hint="@string/username_or_email"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/private_token_et"
            android:hint="@string/private_token"
            android:singleLine="true"
            android:visibility="gone"
            android:typeface="monospace" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_et"
            android:hint="@string/password"
            android:singleLine="true" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/log_in_token"
        android:id="@+id/login_tv"
        android:layout_below="@+id/login_ll"
        android:layout_centerHorizontal="true"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:clickable="true"
        android:textColor="#33b5e5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/sign_in_btn"
        android:background="@drawable/btn_selector"
        android:layout_below="@+id/login_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>